kubernetes/apps/default/nextcloud/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  hostnames:
    - "nextcloud.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: nextcloud
          namespace: default
          port: 8080
